doc: Swagger Category
